GMM_Main/src/objects/Obligation__c.object
<CustomObject>
    <fields>
        <fullName>ACTY_ID__c</fullName>
        <label>ACTY ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_to_Deobligate__c</fullName>
        <formula>Commitment__r.LINE_AVAIL_DEOB_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available to Deobligate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Obligations</relationshipLabel>
        <relationshipName>Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDOB_ID__c</fullName>
        <label>BDOB ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Fiscal_Yr__c</fullName>
        <label>Begin Fiscal Yr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMLN_UIDY_ID__c</fullName>
        <label>COMLN UIDY ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_DOC_NUM__c</fullName>
        <label>COM DOC NUM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_LNUM__c</fullName>
        <label>COM LNUM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_PARN_OF_LINE_ID__c</fullName>
        <label>COM PARN OF LINE ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_STAE_OF_LINE__c</fullName>
        <label>COM STAE OF LINE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COM_TRANS_TYPE__c</fullName>
        <label>COM TRANS TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_Amount1__c</fullName>
        <formula>Commitment__r.LINE_COMMITED_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commitment Amount1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Amount__c</fullName>
        <label>Commitment Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Status__c</fullName>
        <formula>Commitment__r.COM_STAE_OF_LINE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commitment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment</label>
        <referenceTo>Commitment__c</referenceTo>
        <relationshipLabel>Obligations</relationshipLabel>
        <relationshipName>Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_FY1__c</fullName>
        <formula>Commitment__r.FISCAL_YR_2_NBR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End FY1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_FY__c</fullName>
        <label>End FY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Fiscal_Yr__c</fullName>
        <label>End Fiscal Yr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <formula>Commitment__r.LINE_EXPENSE_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FUND_ID__c</fullName>
        <label>FUND ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund1__c</fullName>
        <formula>Commitment__r.FUND_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Location1__c</fullName>
        <formula>Commitment__r.GRNT_LOCATION_NBR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Location1 #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Location__c</fullName>
        <label>Grant Location #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_AVAIL_DEOB_AMT__c</fullName>
        <label>LINE AVAIL DEOB AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LINE_EXPENSE_AMT__c</fullName>
        <label>LINE EXPENSE AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LINE_OBLIGATED_AMT__c</fullName>
        <label>LINE OBLIGATED AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LINE_PAID_AMT__c</fullName>
        <label>LINE PAID AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <formula>Commitment__r.OBL_LNUM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Tota__c</fullName>
        <formula>Obligated_Amount__c  +  Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OBLN_UIDY_ID__c</fullName>
        <label>OBLN UIDY ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBL_DOC_TYPE__c</fullName>
        <label>OBL DOC TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBL_TRANS_TYPE__c</fullName>
        <label>OBL TRANS TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLINE_AVAIL_DEOB_AMT__c</fullName>
        <label>OLINE AVAIL DEOB AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ORGN_ID__c</fullName>
        <label>ORGN ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Class1__c</fullName>
        <formula>Commitment__r.OBJ_CLASS_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Class1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Class__c</fullName>
        <label>Object Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obligated_Amount__c</fullName>
        <formula>Commitment__r.LINE_COMMITED_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROG_ID__c</fullName>
        <label>PROG ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <formula>Commitment__r.LINE_PAID_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Manager1__c</fullName>
        <formula>Commitment__r.PGM_MGR_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Manager1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <label>Program Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose1__c</fullName>
        <formula>Commitment__r.PURPOSE_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purpose1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_FY1__c</fullName>
        <formula>Commitment__r.FISCAL_YR_1_NBR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start FY1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_FY__c</fullName>
        <label>Start FY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Commitment__r.OBL_DOC_TYPE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>refd_line_id__c</fullName>
        <label>refd line id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Obligation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Commitment__c</columns>
        <columns>Award__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Obligation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>